force-app/main/default/objects/DepCategoryMaster__c/DepCategoryMaster__c.object-meta.xml
<CustomObject>
    <label>部署カテゴリマスタ</label>
    <nameField>
        <label>部署カテゴリマスタ名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>