force-app/main/default/objects/DepCategoryMaster__c/fields/JU_No__c.field-meta.xml
<CustomField>
    <fullName>JU_No__c</fullName>
    <label>No_JU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>