force-app/main/default/objects/DepCategoryMaster__c/fields/JuTacTarget__c.field-meta.xml
<CustomField>
    <fullName>JuTacTarget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>住環境戦略ターゲット</label>
    <type>Checkbox</type>
</CustomField>