force-app/main/default/objects/DepCategoryMaster__c/fields/Validation__c.field-meta.xml
<CustomField>
    <fullName>Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>有効</label>
    <type>Checkbox</type>
</CustomField>