force-app/main/default/objects/DepCategoryMaster__c/listViews/all_busyocategori.listView-meta.xml
<ListView>
    <fullName>all_busyocategori</fullName>
    <columns>NAME</columns>
    <columns>BuildAppTacTarget__c</columns>
    <columns>JuTacTarget__c</columns>
    <columns>DX_No__c</columns>
    <columns>JU_No__c</columns>
    <columns>Validation__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>全ての部署カテゴリマスタ</label>
</ListView>